--- a/html/res/bottomBodyCheck.html
+++ b/html/res/bottomBodyCheck.html
@@ -89,13 +89,15 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>
-        window.jQuery || document.write('<script src="./js/jquery-slim.min.js"><\/script>')
+        window.jQuery || document.write('<script src="{{ url_for('
+            static ', filename='
+            js / jquery - slim.min.js ') }}"><\/script>')
     </script>
-    <script src="./js/popper.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/holder.min.js"></script>
-    <script src="./js/jquery.countdown.js"></script>
-    <script src="./js/control.js"></script>
+    <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/holder.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery.countdown.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/control.js') }}"></script>
 </body>
 
 </html>
