--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
             <div class="col-4 pt-1">
             </div>
             <div class="col-4 text-center">
-                <img class="blog-header-logo text-dark" src="https://ntusportscenter.ntu.edu.tw/Uploads/admin/80eb9b2b-7a41-4246-96f1-d3cbe71c4d8c.png" href="#"></img>
+                <img class="blog-header-logo text-dark" src="{{ url_for('static', filename='images/gym_header.png') }}" href="#"></img>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
                 <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
