--- a/html/res/leg.html
+++ b/html/res/leg.html
@@ -24,7 +24,7 @@
             <div class="col-4 pt-1">
             </div>
             <div class="col-4 text-center">
-                <img class="blog-header-logo text-dark" src="https://ntusportscenter.ntu.edu.tw/Uploads/admin/80eb9b2b-7a41-4246-96f1-d3cbe71c4d8c.png" href="#"></img>
+                <img class="blog-header-logo text-dark" src="{{ url_for('static', filename='images/gym_header.png') }}" href="#"></img>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
                 <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
@@ -64,7 +64,7 @@
                 <div class="col-md-3">
                     <h3>腿部伸張機</h3>
                     <div class="card mb-10 box-shadow">
-                        <img class="card-img-top" src="https://i.imgur.com/nb6dgoP.jpg" width="30" height="255" data-src="holder.js/100px225?theme=sky&bg=4d6a5d&fg=eceeef&text=腿部伸張機" alt="Card image cap" data-toggle="modal" data-target="#leg">
+                        <img class="card-img-top" src="{{ url_for('static', filename='images/legExtension.jpg') }}" width="30" height="255" data-src="holder.js/100px225?theme=sky&bg=4d6a5d&fg=eceeef&text=腿部伸張機" alt="Card image cap" data-toggle="modal" data-target="#leg">
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -96,7 +96,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	
+
     <script type=text/javascript src="{{ url_for('static', filename='js/jquery-slim.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
