--- a/html/res/page1.html
+++ b/html/res/page1.html
@@ -23,7 +23,7 @@
             <div class="col-4 pt-1">
             </div>
             <div class="col-4 text-center">
-                <img class="blog-header-logo text-dark" src="https://ntusportscenter.ntu.edu.tw/Uploads/admin/80eb9b2b-7a41-4246-96f1-d3cbe71c4d8c.png" href="#"></img>
+                <img class="blog-header-logo text-dark" src="{{ url_for('static', filename='images/gym_header.png') }}" href="#"></img>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
                 <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
@@ -71,7 +71,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="card mb-4 box-shadow">
-                                <img class="card-img-top equipment_img" src="https://i.imgur.com/nb6dgoP.jpg" width="100p" height="255" data-src="holder.js/100px225?theme=sky&bg=4d6a5d&fg=eceeef&text=腿部伸張機" alt="Card image cap" data-toggle="modal" data-target="#leg">
+                                <img class="card-img-top equipment_img" src="{{ url_for('static', filename='images/legExtension.jpg') }}" width="100p" height="255" data-src="holder.js/100px225?theme=sky&bg=4d6a5d&fg=eceeef&text=腿部伸張機" alt="Card image cap" data-toggle="modal" data-target="#leg">
                                 <div class="card-body">
                                     <p class="card-text">腿部伸張機</p>
                                     <div class="d-flex justify-content-between align-items-center">
@@ -93,7 +93,7 @@
                                                                 </div>
 
                                                             </div>
-                                                            <img class="card-img-top align-items-start" src="https://i.imgur.com/GsbOcg6.png" width="50p" height="200" alt="Card image cap">
+                                                            <img class="card-img-top align-items-start" src="{{ url_for('static', filename='images/legMuscle.png') }}" width="50p" height="200" alt="Card image cap">
                                                         </div>
                                                         <div class="modal-footer">
 
@@ -116,7 +116,7 @@
                         </div>
                         <div class="col-md-4">
                             <div class="card mb-4 box-shadow">
-                                <img class="card-img-top equipment_img" src="https://i.imgur.com/3dwayfq.jpg" width="100p" height="255" data-src="holder.js/140x140" alt="Card image cap" ata-toggle="modal" data-toggle="modal" data-target="#bottom_body">
+                                <img class="card-img-top equipment_img" src="{{ url_for('static', filename='images/bottomBody.jpg') }}" width="100p" height="255" data-src="holder.js/140x140" alt="Card image cap" ata-toggle="modal" data-toggle="modal" data-target="#bottom_body">
                                 <div class="card-body">
                                     <p class="card-text">深蹲架</p>
                                     <div class="d-flex justify-content-between align-items-center">
@@ -138,7 +138,7 @@
                                                                 </div>
 
                                                             </div>
-                                                            <img class="card-img-top align-items-start" src="https://i.imgur.com/uQm0ULI.png" width="50p" height="200" alt="Card image cap">
+                                                            <img class="card-img-top align-items-start" src="{{ url_for('static', filename='images/bottomBodyMuscle.jpg') }}" width="50p" height="200" alt="Card image cap">
                                                         </div>
                                                         <div class="modal-footer">
 
@@ -160,7 +160,7 @@
                         </div>
                         <div class="col-md-4">
                             <div class="card mb-4 box-shadow">
-                                <img class="card-img-top equipment_img" src="https://i.imgur.com/hdf7EUq.jpg" width="100p" height="255" data-src="holder.js/140x140" alt="Card image cap" data-toggle="modal" data-target="#pectorals">
+                                <img class="card-img-top equipment_img" src="{{ url_for('static', filename='images/chest.jpg') }}" width="100p" height="255" data-src="holder.js/140x140" alt="Card image cap" data-toggle="modal" data-target="#pectorals">
                                 <div class="card-body">
                                     <p class="card-text">握推架</p>
                                     <div class="d-flex justify-content-between align-items-center">
@@ -182,7 +182,7 @@
                                                                 </div>
 
                                                             </div>
-                                                            <img class="card-img-top align-items-start" src="https://i.imgur.com/KGKZiB4.jpg" width="50p" height="200" alt="Card image cap">
+                                                            <img class="card-img-top align-items-start" src="{{ url_for('static', filename='images/chestMuscle.png') }}" width="50p" height="200" alt="Card image cap">
                                                         </div>
                                                         <div class="modal-footer">
 
