--- a/html_no_flask/res/chest.html
+++ b/html_no_flask/res/chest.html
@@ -23,11 +23,11 @@
             <div class="col-4 pt-1">
             </div>
             <div class="col-4 text-center">
-                <a href="../index.html"><img class="blog-header-logo text-dark" src="https://ntusportscenter.ntu.edu.tw/Uploads/admin/80eb9b2b-7a41-4246-96f1-d3cbe71c4d8c.png"></img>
+                <img class="blog-header-logo text-dark" src="https://ntusportscenter.ntu.edu.tw/Uploads/admin/80eb9b2b-7a41-4246-96f1-d3cbe71c4d8c.png" href="#"></img>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
-                <a class="btn btn-sm btn-outline-secondary" href="./signup.html">Sign up</a>
-                <a class="btn btn-sm btn-outline-secondary" href="./login.html">Sign in</a>
+                <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
+                <a class="btn btn-sm btn-outline-secondary" href="#">Sign in</a>
             </div>
         </div>
     </header>
@@ -101,6 +101,8 @@
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/holder.min.js"></script>
     <script src="./js/jquery.countdown.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-firestore.js"></script>
     <script src="./js/control.js"></script>
 
 
