--- a/html_no_flask/index.html
+++ b/html_no_flask/index.html
@@ -97,13 +97,15 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>
-        window.jQuery || document.write('<script src="./res/js/jquery-slim.min.js"><\/script>')
+        window.jQuery || document.write('<script src="./js/jquery-slim.min.js"><\/script>')
     </script>
-    <script src="./res/js/popper.min.js"></script>
-    <script src="./res/js/bootstrap.min.js"></script>
-    <script src="./res/js/holder.min.js"></script>
-    <script src="./res/js/jquery.countdown.js"></script>
-    <script src="./res/js/control.js"></script>
+    <script src="./js/popper.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/holder.min.js"></script>
+    <script src="./js/jquery.countdown.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-firestore.js"></script>
+    <script src="./js/control.js"></script>
 
 </body>
 
