--- a/html_no_flask/res/bottomBody.html
+++ b/html_no_flask/res/bottomBody.html
@@ -23,11 +23,11 @@
             <div class="col-4 pt-1">
             </div>
             <div class="col-4 text-center">
-                <a href="../index.html"><img class="blog-header-logo text-dark" src="https://ntusportscenter.ntu.edu.tw/Uploads/admin/80eb9b2b-7a41-4246-96f1-d3cbe71c4d8c.png"></img>
+                <img class="blog-header-logo text-dark" src="https://ntusportscenter.ntu.edu.tw/Uploads/admin/80eb9b2b-7a41-4246-96f1-d3cbe71c4d8c.png" href="#"></img>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
-                <a class="btn btn-sm btn-outline-secondary" href="./signup.html">Sign up</a>
-                <a class="btn btn-sm btn-outline-secondary" href="./login.html">Sign in</a>
+                <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
+                <a class="btn btn-sm btn-outline-secondary" href="#">Sign in</a>
             </div>
         </div>
     </header>
@@ -94,17 +94,17 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>
-        window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')
+        window.jQuery || document.write('<script src="./js/jquery-slim.min.js"><\/script>')
     </script>
-    <script src="jquery.countdown.js"></script>
-    <script src="../../../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../../../dist/js/bootstrap.min.js"></script>
-    <script src="../../../../assets/js/vendor/holder.min.js"></script>
+    <script src="./js/popper.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/holder.min.js"></script>
     <script src="./js/jquery.countdown.js"></script>
-    <script src="control.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-firestore.js"></script>
+    <script src="./js/control.js"></script>
 
 </body>
 
